# ChangeLog for perl-core/Module-Metadata
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/perl-core/Module-Metadata/ChangeLog,v 1.41 2014/07/26 14:08:15 dilfridge Exp $

*Module-Metadata-1.0.11-r1 (26 Jul 2014)

  26 Jul 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  +Module-Metadata-1.0.11-r1.ebuild, -Module-Metadata-1.0.11.ebuild:
  EAPI bump

  10 Jul 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  -Module-Metadata-1.0.3.ebuild, -Module-Metadata-1.0.4.ebuild,
  -Module-Metadata-1.0.5.ebuild, -Module-Metadata-1.0.6.ebuild,
  -Module-Metadata-1.0.9.ebuild, -Module-Metadata-1.0.10.ebuild:
  Remove old

  20 Jan 2014; Mike Frysinger <vapier@gentoo.org> Module-Metadata-1.0.10.ebuild,
  Module-Metadata-1.0.11.ebuild, Module-Metadata-1.0.3.ebuild,
  Module-Metadata-1.0.4.ebuild, Module-Metadata-1.0.5.ebuild,
  Module-Metadata-1.0.6.ebuild, Module-Metadata-1.0.9.ebuild:
  Add arm64 love.

  17 Jan 2014; Mike Frysinger <vapier@gentoo.org> Module-Metadata-1.0.11.ebuild:
  Mark m68k stable.

  02 Mar 2013; Agostino Sarubbo <ago@gentoo.org> Module-Metadata-1.0.11.ebuild:
  Stable for sh, wrt bug #458122

  23 Feb 2013; Agostino Sarubbo <ago@gentoo.org> Module-Metadata-1.0.11.ebuild:
  Stable for sparc, wrt bug #458122

  21 Feb 2013; Agostino Sarubbo <ago@gentoo.org> Module-Metadata-1.0.11.ebuild:
  Stable for ia64, wrt bug #458122

  19 Feb 2013; Agostino Sarubbo <ago@gentoo.org> Module-Metadata-1.0.11.ebuild:
  Stable for arm, wrt bug #458122

  19 Feb 2013; Agostino Sarubbo <ago@gentoo.org> Module-Metadata-1.0.11.ebuild:
  Stable for s390, wrt bug #458122

  19 Feb 2013; Agostino Sarubbo <ago@gentoo.org> Module-Metadata-1.0.11.ebuild:
  Stable for alpha, wrt bug #458122

  19 Feb 2013; Agostino Sarubbo <ago@gentoo.org> Module-Metadata-1.0.11.ebuild:
  Stable for hppa, wrt bug #458122

  19 Feb 2013; Zac Medico <zmedico@gentoo.org> Module-Metadata-1.0.11.ebuild:
  Add ~arm-linux keyword.
