@@ -2,25 +2,25 @@
 Hash: SHA256
 
 DIST Module-Metadata-1.000011.tar.gz 26938 SHA256 9c462bfaff07ab974afe1b239b6b3f836fa7a719faf1c84d04bb463c3ec87a3c SHA512 e76267d63fd4732bcf121d6dc644f80d76b42069072b191d1b165fc5474a0fb8331af8a9acff21b643e5211636178b234634f17cd61e366c73aa7acace8fb81e WHIRLPOOL 527205fdeecaf83ae38cd02485e83c436c8d238fef7d6e1f1c79ecc1da23e52408b1255a6fa49c338a604ba7c227881252184ea6e4e0f1262fc2d06186f159db
-EBUILD Module-Metadata-1.0.11-r1.ebuild 785 SHA256 91e2495f2be1fc5cc1fde8c8955a69a3e1fbbc7a1193388dd49a9cd853e876a1 SHA512 f938788e1503384c06f837774759e9a7244c7411b96a64b64536eb126a2e58a00aab036a8285c02733c258fc18ff7411f70fee7468a6163ab8e787e6e9d2a21a WHIRLPOOL 3ce377e0505fa5e12268194c2672edf6941c0baec02c72692bfc04b0829a5589c1d63df7ba72421890687b21e44d10f9192c69ac9004335876d5bf9dbcf63406
-MISC ChangeLog 5620 SHA256 9a675a6e5898fbed8cccf2090470aa64a4a844d194c692859bdb1ba16ddb5a8f SHA512 3d593d2fd9109042d5f0ba5c0e263ea774c0331f3a23c79cb232a1f23e795ad7cacd5e5c58d5ce519e0b6fa681a2d61b6494875b919cf185544bd2a7aa52a3ab WHIRLPOOL 3e6900605610f69ae08e4a256fcbf6b34d6b2b8521f238d29f87ebb7be831b56ea56613774544b0d8f3b2afc40341ce59c9e2219e737d59daf13e9c45e7798ef
+EBUILD Module-Metadata-1.0.11-r1.ebuild 496 SHA256 d3ccdde2dd24aed6b7e8113844d648b042385c5cdabf3e1f4c5313b125b6e799 SHA512 d7266590d19a531c6899227761a710198e14e0346733d11e7e7815f7031a1077d47cbe1c2cb60aecfd0f320ac8c6f40062af5dfa9dbb041600ae0d3fac052fdc WHIRLPOOL 5d163777aaa862289ed1df11e5b4e9db263038505a780fdf68cd639dc83db7e75f325f0bcd5cfa1c63073e579299d8f006f47d440d4bb93daaee6fb484852384
+MISC ChangeLog 5730 SHA256 705027767b356350cf16d162442b07cbd3b0addc271ac1f519693f6f24b8c1a8 SHA512 85e1e13f941f46bc77159849c6e445b03f0c752a2c7f589788e168c198c0549c321a6fc782383fbca7506c0a23c8a44174060d22f4c223888a29c0b0af8cc92a WHIRLPOOL 0e92b635f51a497ac28a8cfff213b1c547c94866bc41b7c6590215e1f9b5c689cc15ed830fb4fb6ec123b1c8e72f3679b0410ed4f0796312001250e7771767b9
 MISC metadata.xml 304 SHA256 1bff1961a608f90aff255d49387a05d0b489b3b2b522321ae2ba9c971a4429ff SHA512 7d96e0fdfa1b0d4f562c76fe7b96f9ab3274bc07f1be3dd2223465de038db9126e1fb52dc2e6465cd93fbd1cf784d4efe1fdb699451109349c67efe0a300ee79 WHIRLPOOL bc1d0700393d9111458ca68c7d7bfe1edea0c7d9bf329ed6d481fb159ba1b876740ed35e2c7fb197076c2fbe36cd87561e622639acdce8f51c2d39dfa7bb4ffa
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJT07ZQXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQwNzlCRDk4QzA4RENBRkYzQUEwRjQzMDlF
-QkU2QTMzNkJFMTkwMzlDAAoJEOvmoza+GQOce9cP/AikQXzJYDWNhzn2GA2fS/H1
-6i6+iOaggm34iswd7zsOZLkUgyui0BRnYj9XAIHjYcz9HN8NolFvHd0ERB33ghVZ
-bZu9sVULIrTUkm8lxe/WUG5XavrAndxNeyS1mT4SdNzxuiAB3ySFihDawllRTrSu
-cLOskz5hHTK7sTv3q/cQUokaXQyCfcw8MrFZ5dK3yKFKh0+d6EUDGB5fqG4EDMU/
-qk8CGak6rxoYN0olhGkOYUAwzzlF78MTBiFcPtg7WQBqpP6q3+dOAT8Y/Of22WQp
-0pyo2N0XeKgpIE8oJFbF3JhA4R1tRzb83T2kZxIdAvNTD3P3dzrNX4nbDB3kE9Ou
-r6G47bDwEREgmF8EFr6EcmNyTeaASAl8mxtL2FAICmkrFVHBjQXfUwk9Z/q9nokO
-xdo6eUpFWua2WbBNb63P6gXXT4cDm3vjV1FOmIl/2gyn8+O1sp1YDj3VcKZdUC3r
-+CghXR5elYQJSdXtNGRdNWodmXQ9eB7erturzri8KWF5Pj3ebsIVd+VtOAgt91jV
-Ti25puDPBhFbObMRJKnwN8wpwkAyaunuBIiYdLLoI8H4lCEsBwZzGf9hVw5+tiA7
-LoGzuXjuYa6HRsjreq2Po/hqDoaCZ775txpvckmRHNoOnHoiteeOYTw28jeBs7rf
-aPLNn1y/RMtdIQ0JWavF
-=WOaR
+iQJ8BAEBCABmBQJVdfgAXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0RkJDMzI0NjNBOTIwMDY5MTQ2NkMzNDBF
+MTM4NkZEN0VGNEI1Nzc5AAoJEOE4b9fvS1d5ivIP/R3sAuy2g6kpJ0yblWrb3rvm
+cFxzOOZ0sO0rnJMqHYz9lO4V66fiRfiC23kMaIqxY8hnasNr+FWtTpIftX1MX/jM
+aCR+ADYPZy+cesLkEUjKQi13nvpZ6AfzCUBfAUAbiAm0iDvdXBbTs1ffxo1vwKkf
+Jn4XG3g4j05DrJ98c1/UzQoXtNOzfMHhOQ00l0LBI9QdamdHg5wyiPWH6TRHFjzt
+hqo8aLUbFCkQ7evTQzkKlJNrsdTWMwuJiTqwHlOQQSdrlJR4m5hwjdsC3V/tArNV
+LCE7+zH6+iEE4fQ347kkJQP2ZtcVIoTvCNvOJXtj1AVyFZBTNv5OcIKcQZuHgyAk
+sQM/Ae9XpOy2BEtyy2gdRvJUAoXTAVi0ETBHeFsHOetou+EELhXeD76wIRBpxN4J
+qOMsm0cUu7xW4bLXYDTZoLFsve/ZdlR5tlYJnvk7TPSmc38+kWG8v9K2Jawp/Fw0
+jzEyn2DlSi/z4CAu7U2IeqIiO26VEiG1VqymFcvJctdzYPk6ihCNTG/dTnK6ZZ+n
+KLnmp9ndhwnphS70hufASlnn8jWLB9X00JBE4JQ3vzZw8q2dJG2+Due/V16qAk8x
+KrYE8wzmk/tPED+exk/3RtlGfDPFTWTLYwlFjn4yzqsMYJW2IN5+GkhkwpPGQfbG
+WcNDmsr2hzWinmM99er5
+=2VJC
 -----END PGP SIGNATURE-----
