@@ -1,6 +1,10 @@
 # ChangeLog for perl-core/Module-Metadata
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/Module-Metadata/ChangeLog,v 1.41 2014/07/26 14:08:15 dilfridge Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/perl-core/Module-Metadata/ChangeLog,v 1.42 2015/06/08 20:15:59 dilfridge Exp $
+
+  08 Jun 2015; Andreas K. Huettel <dilfridge@gentoo.org>
+  Module-Metadata-1.0.11-r1.ebuild:
+  Drop keywords
 
 *Module-Metadata-1.0.11-r1 (26 Jul 2014)
 
